--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -17,13 +17,16 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.20'
+          go-version-file: "go.mod"
+      - run: |
+          sudo apt-get update
+          sudo apt-get install libasound2-dev libgl1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev libxxf86vm-dev
       - run: go build -o web/maze.wasm cmd/app/main.go
         env:
           GOOS: js
           GOARCH: wasm
       - run: cp $(go env GOROOT)/misc/wasm/wasm_exec.js web
-      - run: go test ./...
+      - run: go test -v ./...
 
       - uses: actions/configure-pages@v4
       - uses: actions/upload-pages-artifact@v2
